--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,20 @@ jobs:
         uses: actions/checkout@v5
       - name: Install, build, and upload your site
         uses: withastro/action@v5
+      - name: Copy demo files
+        run: |
+          echo "Copying demo files..."
+          mkdir -p dist/_demos/fullstack-tutorial
+          cp -r tutorial-source-code/fullstack-tutorial/frontend/* dist/_demos/fullstack-tutorial/
+          echo "Demo files copied to dist/_demos/fullstack-tutorial"
+
+          if [ -n "${{ secrets.DEMO_WALLET_ADDRESSES }}" ]; then
+            echo "Replacing USER_ADDRESS with configured address"
+            sed -i "s/const USER_ADDRESS = '0xYourAddressHere';/const USER_ADDRESS = '${{ secrets.DEMO_WALLET_ADDRESSES }}';/" dist/_demos/fullstack-tutorial/script.js
+            echo "USER_ADDRESS replaced successfully"
+          else
+            echo "DEMO_WALLET_ADDRESSES not set, skipping replacement"
+          fi
 
   deploy:
     needs: build
